2005-11-12  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-write-file): Don't visit the destination
	file, just write the data to it using write-region.  This is
	similar to revision 1.32 of saveplace.el, but with an additional
	change to avoid visiting the file in the first place.

2005-11-12  Chong Yidong  <cyd@stupidchicken.com>

	* hi-lock.el (hi-lock-mode): Set the default value of
	font-lock-defaults.

2005-11-11  Luc Teirlinck  <teirllm@auburn.edu>

	* find-lisp.el (find-lisp-find-dired-insert-file): Pass `string'
	arg to `file-attributes'.
	(find-lisp-format): The UID and GID can now be strings.

2005-11-12  Kim F. Storm  <storm@cua.dk>

	* help.el (help-map): Bind C-h d to apropos-documentation.

	* simple.el (what-cursor-position): Print (EOB) instead of (100%)
	when point is at end-of-buffer.

	* apropos.el (apropos-match-face): Doc fix.
	(apropos-sort-by-scores): Add new choice `verbose'.
	(apropos-documentation-sort-by-scores): New defcustom.
	(apropos-pattern): Now contains the pattern entered by the user.
	(apropos-pattern-quoted): New defvar.
	(apropos-regexp): New defvar, containing the regexp corresponding
	to apropos-pattern.
	(apropos-all-words-regexp): Renamed from apropos-all-regexp.
	(apropos-read-pattern): New defun.  Use it to read pattern arg in
	interactive calls; returns list of words for a word list, and
	string for a regexp.
	(apropos-parse-pattern): Renamed from apropos-rewrite-regexp.  Now
	parses a list of words or regexp as returned by apropos-read-pattern.
	(apropos-calc-scores): Return nil if apropos-regexp doesn't match.
	(apropos-score-doc): Return a very high score if the string
	entered by the user matches literally.
	(apropos-variable): Doc fix.  Use apropos-read-pattern.
	(apropos-command): Doc fix.  Use apropos-read-pattern and
	apropos-parse-pattern.  Call apropos-print with nosubst=t.
	(apropos, apropos-value): Doc fix. Use apropos-read-pattern and
	apropos-parse-pattern.